# browser-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  SKILL.md  admin.py  admin_cli.py  daemon.py  helpers.py  install.md  pyproject.toml  run.py  runner_cli.py
.github/workflows/: ci.yml
archive/python-legacy/: README.md  admin.py  legacy_warnings.py
docs/: architecture.md  development.md  future-wasm.md  python-cli-helpers.md  python-integration.md  rust-compat-contract.md  rust-migration-backlog.md  rust-native-replacement-plan.md  rust-rewrite-plan.md  wasm-runner-design.md
domain-skills/: README.md
domain-skills/amazon/: product-search.md
domain-skills/arxiv/: scraping.md
domain-skills/arxiv-bulk/: scraping.md
domain-skills/booking-com/: scraping.md
domain-skills/capterra/: scraping.md
domain-skills/coingecko/: scraping.md
domain-skills/coursera/: scraping.md
domain-skills/craigslist/: scraping.md
domain-skills/crossref/: scraping.md
domain-skills/duckduckgo/: scraping.md
domain-skills/ebay/: scraping.md
domain-skills/etsy/: scraping.md
domain-skills/facebook/: groups.md  pages.md
domain-skills/g2/: scraping.md
domain-skills/genius/: scraping.md
domain-skills/github/: scraping.md
domain-skills/glassdoor/: scraping.md
domain-skills/goodreads/: scraping.md
domain-skills/gutenberg/: scraping.md
domain-skills/hackernews/: scraping.md
domain-skills/howlongtobeat/: scraping.md
domain-skills/itch-io/: scraping.md
domain-skills/job-boards/: indeed-glassdoor.md
domain-skills/letterboxd/: scraping.md
domain-skills/macrotrends/: scraping.md
domain-skills/medium/: article-hydration.md  scraping.md
domain-skills/metacritic/: scraping.md
domain-skills/musicbrainz/: scraping.md
domain-skills/nasa/: scraping.md
domain-skills/news-aggregation/: multi-source.md
domain-skills/open-library/: scraping.md
domain-skills/openalex/: scraping.md
domain-skills/openstreetmap/: scraping.md
domain-skills/package-registries/: npm-pypi.md
domain-skills/producthunt/: scraping.md
domain-skills/pubmed/: scraping.md
domain-skills/quora/: scraping.md
domain-skills/rawg/: scraping.md
domain-skills/reddit/: scraping.md
domain-skills/rest-countries/: scraping.md
domain-skills/sec-edgar/: scraping.md
domain-skills/soundcloud/: scraping.md
domain-skills/spotify/: scraping.md
domain-skills/steam/: scraping.md
domain-skills/tiktok/: upload.md
domain-skills/trello/: boards-and-lists.md
domain-skills/trustpilot/: scraping.md
domain-skills/walmart/: scraping.md
domain-skills/weather/: scraping.md
domain-skills/wellfound/: scraping.md
domain-skills/world-bank/: scraping.md
domain-skills/zillow/: scraping.md
domains/: README.md
domains/amazon/: skill.md
domains/archive-org/: skill.md
domains/arxiv-bulk/: skill.md
domains/coinmarketcap/: skill.md
domains/coursera/: skill.md
domains/craigslist/: skill.md
domains/dev-to/: skill.md
domains/duckduckgo/: skill.md
domains/ebay/: skill.md
domains/eventbrite/: skill.md
domains/facebook/: groups.md  skill.md
domains/fred/: skill.md
domains/github/: repo-actions.md
domains/goodreads/: skill.md
domains/hackernews/: skill.md
domains/howlongtobeat/: skill.md
domains/itch-io/: skill.md
domains/job-boards/: skill.md
domains/linkedin/: skill.md
domains/medium/: article-hydration.md  skill.md
domains/musicbrainz/: skill.md
domains/play2048-co/: skill.md
domains/reddit/: skill.md
domains/salesforce/: skill.md
domains/soundcloud/: skill.md
interaction-skills/: connection.md  cookies.md  cross-origin-iframes.md  dialogs.md  downloads.md  drag-and-drop.md  dropdowns.md  iframes.md  network-requests.md  print-as-pdf.md  printing.md  profile-sync.md  screenshots.md  scrolling.md  shadow-dom.md  tabs.md  uploads.md  viewport.md
rust/: Cargo.toml  README.md
rust/bins/bhrun/: Cargo.toml
rust/bins/bhrun/src/: main.rs
rust/guests/rust-2048-autoplay/: Cargo.toml
rust/guests/rust-2048-autoplay/src/: lib.rs
rust/guests/rust-event-waits-sdk/: Cargo.toml
rust/guests/rust-event-waits-sdk/src/: lib.rs
rust/guests/rust-github-trending/: Cargo.toml
rust/guests/rust-github-trending/src/: lib.rs
rust/guests/rust-letterboxd-popular/: Cargo.toml
rust/guests/rust-letterboxd-popular/src/: lib.rs
rust/guests/rust-metacritic-game-scores/: Cargo.toml
rust/guests/rust-metacritic-game-scores/src/: lib.rs
rust/guests/rust-navigate-and-read/: Cargo.toml
rust/guests/rust-navigate-and-read/src/: lib.rs
rust/guests/rust-persistent-browser-state/: Cargo.toml
rust/guests/rust-persistent-browser-state/src/: lib.rs
rust/guests/rust-raw-cdp-smoke/: Cargo.toml
rust/guests/rust-raw-cdp-smoke/src/: lib.rs
rust/guests/rust-reddit-post-scrape/: Cargo.toml
rust/guests/rust-reddit-post-scrape/src/: lib.rs
rust/guests/rust-tab-response-workflow/: Cargo.toml
rust/guests/rust-tab-response-workflow/src/: lib.rs
scripts/: _admin_cli.py  _runner_cli.py  bhrun_2048_guest_smoke.py  bhrun_actions_smoke.py  bhrun_console_smoke.py  bhrun_cookies_smoke.py  bhrun_dialog_smoke.py  bhrun_download_smoke.py  bhrun_drag_smoke.py  bhrun_etsy_search_guest_smoke.py  bhrun_event_smoke.py  bhrun_event_waits_guest_smoke.py  bhrun_github_trending_guest_smoke.py  bhrun_guest_smoke.py  bhrun_letterboxd_popular_guest_smoke.py  bhrun_metacritic_game_scores_guest_smoke.py  bhrun_persistent_guest_remote_smoke.py  bhrun_persistent_guest_smoke.py  bhrun_print_pdf_smoke.py  bhrun_producthunt_guest_smoke.py  bhrun_raw_cdp_guest_smoke.py  bhrun_reddit_guest_smoke.py  bhrun_request_smoke.py  bhrun_response_smoke.py  bhrun_screenshot_smoke.py  bhrun_spotify_search_guest_smoke.py  bhrun_tab_response_guest_smoke.py  bhrun_tabs_smoke.py  bhrun_tradingview_symbol_search_guest_smoke.py  bhrun_upload_smoke.py  bhrun_viewport_smoke.py  bhrun_walmart_search_guest_smoke.py  bhrun_watch_events_smoke.py  domain_skill_github_smoke.py  installed_package_compat_smoke.py  remote_smoke.py  scan_sensitive.sh
tests/: stub_daemon.py  test_rust_mode_contract.py
(+41 files in other folders)
