[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bu"
version = "0.1.0"
description = "LLM-first browser control via CDP"
requires-python = ">=3.11"
dependencies = [
    "cdp-use>=1.4.5",
    "websockets>=16.0",
]

[project.scripts]
bh = "run:main"
browser-harness = "run:main"

[tool.setuptools]
py-modules = ["run", "helpers", "daemon"]
