[build-system]
requires = ["setuptools>=69", "setuptools-rust>=1.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.1.0"
description = "The simplest, thinnest, and most powerful harness to control your real browser with your agent."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
browser-harness-py = "run:main"

[tool.setuptools]
py-modules = ["run", "admin_cli", "runner_cli", "legacy_warnings"]

[[tool.setuptools-rust.bins]]
target = "browser-harness"
path = "rust/bins/browser-harness-cli/Cargo.toml"

[[tool.setuptools-rust.bins]]
target = "bhctl"
path = "rust/bins/bhctl/Cargo.toml"

[[tool.setuptools-rust.bins]]
target = "bhrun"
path = "rust/bins/bhrun/Cargo.toml"

[[tool.setuptools-rust.bins]]
target = "bhd"
path = "rust/bins/bhd/Cargo.toml"
