[package]
name = "rust-event-waits-sdk-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "rust_event_waits_sdk_guest"

[dependencies]
bh-guest-sdk = { path = "../../crates/bh-guest-sdk" }
serde_json = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
