[package]
name = "rust-metacritic-game-scores-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "rust_metacritic_game_scores_guest"

[dependencies]
bh-guest-sdk = { path = "../../crates/bh-guest-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
