[package]
name = "rust-reddit-post-scrape-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "rust_reddit_post_scrape_guest"

[dependencies]
bh-guest-sdk = { path = "../../crates/bh-guest-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
